# library_v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
analytics/: servise.py  urls.py  views.py
analytics/templates/analytics/: optimization.html
config/: settings.py  urls.py
core/: admin.py  apps.py  constants.py  models.py  urls.py  validators.py  views.py
core/fixtures/: initial_data.json
core/migrations/: 0001_initial.py  0002_alter_reader_name_alter_reader_phone.py  0003_remove_book_reader_alter_book_author_and_more.py
core/templates/core/: books.html  readers.html
homepage/: mixins.py  urls.py  views.py
homepage/templates/homepage/: handed_books.html  index.html  library_detail.html  shelves_books.html  total_books.html  total_readers.html
templates/: base.html
templates/includes/: footer.html  header.html
