[project]
name = "library-project"
version = "0.1.0"
description = "Проект управления книгами в библиотеке"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-debug-toolbar>=6.3.0",

]
[dependency-groups]
dev = [
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "icecream>=2.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
    "ruff>=0.15.13",
]
[tool.ruff]
line-length = 79
indent-width = 4
required-version = ">=0.11.11"
target-version = "py311"
preview = true
exclude = ["config/settings.py"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
# Вот здесь мы прописываем все игноры
ignore = [
    "E265", "F811", "D100", "D105", "D104", "D203", "D211", "D213", 
    "N818", "W505", "ANN401", "COM812", "ANN204", "D107"
]
select = ["E3", "E5", "E4", "E7", "E9", "W", "C90", "I", "N", "D", "F", "ANN", "ASYNC", "A", "COM", "RET"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "E401"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
case-sensitive = true
known-local-folder = ["src"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 79
max-line-length = 79


